added annotations to the DTO, made imports into some controllers
